# python-client

./: README.md  example.py  pyproject.toml  setup.py
nuxai/: __init__.py  generate.py
nuxai/examples/: example.py
